Fixed player-container width on small screens

--- a/client/FlosGameBoard/src/app/what-the-heck/what-the-heck.component.scss
+++ b/client/FlosGameBoard/src/app/what-the-heck/what-the-heck.component.scss
@@ -17,12 +17,13 @@
   display: flex;
   flex-grow: 1;
   overflow: auto;
+  max-width: 100%;
 
   .player {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0 15px
+    margin: 0 30px
   }
 
   .small-avatar-wrapper {
